MDEV-5786: mysql_upgrade on galera replicates "alter table" on system tables

With wsrep patch, binary logging is implicitly enabled. This
fix makes sure that it is turned off for --skip-write-binlog
by swithcing off wsrep_on.